@@ -2,6 +2,7 @@ Revision history for Test-Mock-Time
 
 {{$NEXT}}
 	- Reformat doc.
+	- Drop support for Mojolicious < 6.0.
 
 v0.1.5  2016-02-18 14:27:57 EET
 	- Fix floating point math on perl with -Duselongdouble.
